--- a/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
+++ b/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>entity_framework_console_app</RootNamespace>
+    <RootNamespace>SampleProjectsNetCore</RootNamespace>
     <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
