Identity - Updated migrations for sqlserver

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=IdentityServer.db;"
+    "DefaultConnection": "Server=127.0.0.1,1433;Initial Catalog=IdentityServer;User ID=sa;Password=Password123!;MultipleActiveResultSets=true"
   }
 }
