--- a/IdentityServer/IdentityServer.csproj
+++ b/IdentityServer/IdentityServer.csproj
@@ -27,4 +27,7 @@
     </PackageReference>
     <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataMigrations\" />
+  </ItemGroup>
 </Project>
