--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -1,5 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1,1433;Initial Catalog=IdentityServer;User ID=sa;Password=Password123!;MultipleActiveResultSets=true"
+  },
+  "Data": {
+    "Seed": true
   }
 }
